Fixed a bunch of formatting things and got images working.

--- a/MtGService/Web.config
+++ b/MtGService/Web.config
@@ -21,7 +21,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-MtGService-20150319053449.mdf;Initial Catalog=aspnet-MtGService-20150319053449;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="aspnet:AllowAsyncDuringSyncStages" value="true" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
